crates/weft-snapshots/tests/snapshots/html-data/corpus-booking.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: corpus-booking as html-data
---
<!doctype html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=device-width, initial-scale=1">
<title>Book a trip</title>
<style>
:root {
  --weft-space-xs: 4px;
  --weft-space-sm: 8px;
  --weft-space-md: 16px;
  --weft-space-lg: 24px;
  --weft-space-xl: 32px;
  --weft-radius-sm: 4px;
  --weft-radius-md: 8px;
  --weft-radius-pill: 999px;
  --weft-font-size-sm: 0.875rem;
  --weft-font-size-md: 1rem;
  --weft-font-size-lg: 1.25rem;
  --weft-font-size-xl: 1.75rem;
  --weft-color-white: #ffffff;
  --weft-color-ink: #1a1c21;
  --weft-color-blue-_root: #2563eb;
  --weft-color-red: #dc2626;
  --weft-color-action-primary: #2563eb;
  --weft-color-action-danger: #dc2626;
}
.weft-stack { display: flex; flex-direction: column; }
.weft-row { display: flex; flex-direction: row; }
.weft-grid { display: grid; }
[data-align="start"] { align-items: flex-start; }
[data-align="center"] { align-items: center; }
[data-align="end"] { align-items: flex-end; }
[data-align="stretch"] { align-items: stretch; }
[data-wrap] { flex-wrap: wrap; }
a { display: inline-block; }
[hidden] { display: none !important; }
</style>
</head>
<body>
<main data-weft-id="booking" aria-label="Book a trip">
  <h1 data-weft-id="title">Book a trip</h1>
  <form data-weft-id="trip" aria-label="Trip" data-action="submit:trip.book">
    <label><span aria-hidden="true">Destination</span><input data-weft-id="city" aria-label="Destination" list="weft-city-options" placeholder="Search a city" value="Lisbon" data-action="change:trip.edit">
      <datalist id="weft-city-options">
        <option data-weft-id="city-option[0]" value="Lisbon">Lisbon</option>
        <option data-weft-id="city-option[1]" value="Porto">Porto</option>
        <option data-weft-id="city-option[2]" value="Faro">Faro</option>
      </datalist>
    </label><label><span aria-hidden="true">Departure</span><input data-weft-id="depart" aria-label="Departure" type="date" min="2026-01-01" max="2026-12-31" value="2026-06-14" data-action="change:trip.edit"></label><label><span aria-hidden="true">Check-in time</span><input data-weft-id="checkin" aria-label="Check-in time" type="time" value="15:30"></label><label><span aria-hidden="true">Reminder</span><input data-weft-id="reminder" aria-label="Reminder" type="datetime-local" value="2026-06-12T09:00"></label><label><span aria-hidden="true">Guests</span><span data-weft-stepper><button type="button" tabindex="-1" aria-hidden="true" data-weft-step="down">−</button><input data-weft-id="guests" aria-label="Guests" type="number" min="1" max="8" step="1" value="2" data-action="change:trip.edit"><button type="button" tabindex="-1" aria-hidden="true" data-weft-step="up">+</button></span></label><label><span aria-hidden="true">Budget per night</span><input data-weft-id="budget" aria-label="Budget per night" type="range" min="50" max="500" step="10" value="180" data-action="change:trip.edit"></label>
    <div data-weft-id="cabin" aria-label="Cabin" role="radiogroup" data-weft-segmented data-action="change:trip.edit">
      <span aria-hidden="true">Cabin</span><label><input data-weft-id="cabin-economy" type="radio" name="weft-cabin" value="economy" aria-label="Economy"><span aria-hidden="true">Economy</span></label><label><input data-weft-id="cabin-business" type="radio" name="weft-cabin" checked value="business" aria-label="Business"><span aria-hidden="true">Business</span></label><label><input data-weft-id="cabin-first" type="radio" name="weft-cabin" value="first" aria-label="First"><span aria-hidden="true">First</span></label>
    </div>
    <label><span aria-hidden="true">Trip colour</span><input data-weft-id="tag" aria-label="Trip colour" type="color" value="#3b82f6" data-action="change:trip.edit"></label>
    <footer data-weft-slot="footer">
      <button data-weft-id="book" type="submit" data-variant="primary">Book</button>
    </footer>
  </form>
</main>
</body>
</html>
